[gd_scene load_steps=7 format=3 uid="uid://lwxgu3quox88"]

[ext_resource type="Script" path="res://scripts/hud_smierc_wegorz.gd" id="1_i6r4m"]
[ext_resource type="Texture2D" uid="uid://cpmbwrq7xb2r4" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 6.png" id="2_56kgw"]
[ext_resource type="Texture2D" uid="uid://dlrwjfj0x17yc" path="res://assets/spirites/menu, przyciski/menu, przyciski/restart.png" id="3_5v334"]
[ext_resource type="Texture2D" uid="uid://dgp61t7y7oo2a" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 7 copy 2-2.png" id="4_fqyg6"]
[ext_resource type="Texture2D" uid="uid://bg1ek3jicmcov" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 7 copy 2-1.png" id="5_2b7uc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vv8p7"]
bg_color = Color(0.228096, 0.643726, 0.462094, 0.666667)

[node name="hud_smierc" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_i6r4m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -540.0
offset_right = 540.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_56kgw")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -153.0
offset_right = 276.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vv8p7")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Przegra≈Çes"

[node name="Label2" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30

[node name="Restart" type="TextureButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_5v334")

[node name="Menu" type="TextureButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_fqyg6")

[node name="Wyjscie" type="TextureButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_2b7uc")

[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Wyjscie" to="." method="_on_wyjscie_pressed"]
